Bootstrapping Jasypt for spring-cloud environments.
Spring cloud defines a **[Bootstrap phase](http://cloud.spring.io/spring-cloud-static/spring-cloud.html#_the_bootstrap_application_context)** wherein it creates a context from configurations in boostrap.properties (or .yml) files. However it fails if Jasypt is used to decrypt encrypted text in boostrap.properties.
<p>
Consider the following scenario where the [config-server itself is bootstrapped](https://cloud.spring.io/spring-cloud-config/multi/multi__embedding_the_config_server.html) - so that the config-server is trying to pull configurations from config-repo during the bootstrap phase. However the password for config-repo is encrypted with Jasypt, but Jasypt decrypts the properties at a later stage only (after boostrap phase).

```
spring.cloud.config.server.bootstrap=true
spring.application.name=config-server

spring.cloud.config.server.git.uri=https://bitbucket.org/fahim-experiment/config-repo

spring.cloud.config.server.git.username=myusername@somewhere.com
spring.cloud.config.server.git.password=ENC(GarNzpLDDoIJ3Y5lDabAllQuV74tNFbj)

jasypt.encryptor.algorithm=PBEWithMD5AndDES
jasypt.encryptor.password=passphrase

```

As a solution, Jasypt can be bootstrapped in a spring-cloud based application, so that encrypted text will have decrypted by the time config-server is trying to pull from config-repo.

PoC to replicate the issue [here](https://github.com/fahimfarookme/jasypt-bootstrap-issue/tree/master/issue) and the solution [here](https://github.com/fahimfarookme/jasypt-bootstrap-issue/tree/master/fix).

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <spring.boot.version>1.5.4.RELEASE</spring.boot.version>
+        <spring.cloud.version>Dalston.SR4</spring.cloud.version>
         <jasypt.version>1.9.2</jasypt.version>
         <maven.compiler.version>3.6.1</maven.compiler.version>
         <start-class>Application</start-class>
@@ -177,6 +178,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>		
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
