--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <spring.boot.version>1.5.10.RELEASE</spring.boot.version>
-        <spring.cloud.version>Edgware.SR1</spring.cloud.version>
+        <spring.boot.version>2.0.0.RELEASE</spring.boot.version>
+        <spring.cloud.version>Finchley.M8</spring.cloud.version>
         <jasypt.version>1.9.2</jasypt.version>
         <maven.compiler.version>3.6.1</maven.compiler.version>
         <start-class>Application</start-class>
