--- a/jasypt-spring-boot/pom.xml
+++ b/jasypt-spring-boot/pom.xml
@@ -15,7 +15,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jasypt</groupId>
+            <groupId>com.melloware</groupId>
             <artifactId>jasypt</artifactId>
         </dependency>
         <dependency>
@@ -38,11 +38,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
