--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <java.version>1.8</java.version>
         <spring.boot.version>2.1.0.RELEASE</spring.boot.version>
         <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
-        <jasypt.version>1.9.2</jasypt.version>
+        <jasypt.version>1.9.4</jasypt.version>
         <maven.compiler.version>3.7.0</maven.compiler.version>
         <start-class>Application</start-class>
     </properties>
@@ -194,7 +194,7 @@
                 <version>${spring.boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.jasypt</groupId>
+                <groupId>com.melloware</groupId>
                 <artifactId>jasypt</artifactId>
                 <version>${jasypt.version}</version>
             </dependency>
