--- a/jasypt-spring-boot-starter/pom.xml
+++ b/jasypt-spring-boot-starter/pom.xml
@@ -43,4 +43,23 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <environmentVariables>
+                        <TEST_ENV_FOOSTRING>test1</TEST_ENV_FOOSTRING>
+                        <TEST_ENV_BAR_STRING>test2</TEST_ENV_BAR_STRING>
+                        <TEST_ENV_FOOLIST>a1,b1</TEST_ENV_FOOLIST>
+                        <TEST_ENV_BAR_LIST>a2,b2</TEST_ENV_BAR_LIST>
+                        <TEST_ENV_STRINGMAP_K1>v1</TEST_ENV_STRINGMAP_K1>
+                        <TEST_ENV_LISTMAP_K2>v2</TEST_ENV_LISTMAP_K2>
+                    </environmentVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
