--- a/jasypt-maven-plugin/pom.xml
+++ b/jasypt-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jasypt-spring-boot-parent</artifactId>
         <groupId>com.github.ulisesbocchio</groupId>
-        <version>3.0.0</version>
+        <version>3.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jasypt-maven-plugin</artifactId>
